Fix comparison slider scaling original image instead of clipping
The original image was resizing with the slider movement because it had
width: 100% relative to its parent container. Now the image maintains
full container width and is clipped by overflow: hidden.

--- a/src/index.html
+++ b/src/index.html
@@ -340,8 +340,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
       height: auto;
+      max-width: none;
     }
 
     .slider-line {
