--- a/src/index.html
+++ b/src/index.html
@@ -333,15 +333,13 @@
       left: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
+      clip-path: inset(0 50% 0 0);
     }
 
     .image-before img {
-      position: absolute;
-      top: 0;
-      left: 0;
+      display: block;
+      width: 100%;
       height: auto;
-      max-width: none;
     }
 
     .slider-line {
